# showerthoughts

./: .env  Cargo.toml  reddit_resp.json  rustfmt.toml
src/: lib.rs  main.rs  models.rs  routines.rs
