[package]
name = "showerthoughts"
version = "0.4.0"
edition = "2018"
authors = ["Ivan Mondragon <imondrag@umich.edu>"]
license = "MIT"

[dependencies]
reqwest = "0.9.15"
app_dirs = "1.2.1"
preferences = "1.1.0"
rand = "0.6.5"
serde = "1.0.90"
serde_derive = "1.0.90"
serde_json = "1.0.39"
bincode = "1.1.3"
lazy_static = "1.3.0"
log = "0.4.6"
pretty_env_logger = "0.3.0"

[profile.release]
opt-level = 3
lto = true
