[package]
name = "showerthoughts"
version = "0.4.0"
edition = "2018"
authors = ["Ivan Mondragon <imondrag@umich.edu>"]
license = "MIT"

[dependencies]
reqwest = "0.9.22"
app_dirs = "1.2.1"
preferences = "1.1.0"
rand = "0.7.2"
serde = "1.0.101"
serde_derive = "1.0.101"
serde_json = "1.0.41"
bincode = "1.2.0"
lazy_static = "1.4.0"
log = "0.4.8"
pretty_env_logger = "0.3.1"

[profile.release]
opt-level = 3
lto = true
