[package]
name = "showerthoughts"
version = "0.5.0"
authors = ["Ivan Mondragon <imondrag@umich.edu>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
pretty_env_logger = "0.4.0"

[profile.release]
opt-level = 3
lto = true

